
## module_v2 : 0.0.2 - 2022.07.07

Modified module structure.

- move src/musort/ to musort/
- add musort/info.py for storing package information
- add setup.py and build.sh scripts for packaging and uploading to PyPI

## module_v2 : 0.0.3 - 2022.12.20

Bug fixes.

- fix exception logs not being printed due to extra argument
- fix minor type issue in MusicFile.get arising from TinyTag.artist possibly being None
- modify --folder-mode sorting to catch all OSErrors, as opposed to just FileExistsError, PermissionError
- move musort/locale/ to musort/os_locale/ so as to avoid conflict with the standard library

## master : 0.1.0 - 2022.12.28

Updates to build process, ease-of-access, and project layout.

- add support for calling the script as either `python -m musort` or simply `-musort`
- add support for reading config files in the current working directory
- move old master branch to original-branch, copy module_v2 into its place

- add CHANGELOG
- add pre-commit script for automatic `black` formatting
- fix exception logging not being logged with severity `logging.ERROR`
- fix --replace-duplicates param not working with folders in --folder-mode
- modify requirements-dev.txt to depend on requirements.txt instead of vice versa
- move musort/ once more to src/musort/, to make script change possible
- remove build.sh in favor of Makefile
- update setup.py, README.md to match all stated changes

## master : 0.2.0 - 2023.04.11

- add musort_conf, musort-conf to list of accepted configuration paths
- add --use-dashes param
- fix files already existing possibly being ignored
- remove .mp4 from list of file suffixes, as it's mostly used for video
- modify --folder-mode to ignore folders containing a .musort_ignore file
- modify config searching to find only one file and possibly in parent directories
- modify target directory to default to the directory of the first found config file
- add support for sorting multiple folders at a time by making positional argument a list